--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,7 +57,7 @@
             android:orientation="horizontal"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="15dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -76,6 +76,7 @@
                 android:layout_gravity="center_vertical"
                 android:textSize="16sp"
                 android:inputType="text"
+                android:background="@drawable/custom_edittext"
                 android:fontFamily="@font/m_gothic_normal" />
 
         </LinearLayout>
@@ -104,6 +105,7 @@
                 android:layout_gravity="center_vertical"
                 android:textSize="16sp"
                 android:inputType="number"
+                android:background="@drawable/custom_edittext"
                 android:fontFamily="@font/m_gothic_normal" />
 
         </LinearLayout>
@@ -113,23 +115,31 @@
             android:layout_height="60dp"
             android:layout_below="@id/layout_login_number"
             android:text="@string/login_str"
-            android:textSize="15sp"
             android:onClick="onClick"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
-            android:layout_marginTop="12dp"/>
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="10dp"
+            android:textSize="18sp"
+            android:textColor="@color/focusText"
+            android:fontFamily="@font/m_gothic_bold"
+            android:background="@drawable/custom_button"
+            style="?android:attr/borderlessButtonStyle"/>
 
         <Button
             android:id="@+id/bt_registration"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_below="@id/bt_login"
             android:text="@string/registration_str"
-            android:textSize="15sp"
             android:onClick="onClick"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
-            android:layout_marginTop="0dp"/>
+            android:textSize="14sp"
+            android:textColor="@color/unfocusText"
+            android:fontFamily="@font/m_gothic_bold"
+            android:background="@drawable/custom_button"
+            style="?android:attr/borderlessButtonStyle"/>
 
     </RelativeLayout>
 
