--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,12 +3,15 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="transparent">#00000000</color>
+    <color name="transparent">#00ff0000</color>
     <color name="hyperlink">#2196F3</color>
     <color name="menubar">#0E4B69</color>
     <color name="hintText">#888888</color>
     <color name="focusText">#222222</color>
     <color name="unfocusText">#707070</color>
+    <color name="disableText">#B4B4B4</color>
     <color name="disableButton">#E0E0E0</color>
     <color name="timeColor">#78468c</color>
+    <color name="applyButton">#91CFFF</color>
+    <color name="cancelButton">#FAC9C6</color>
 </resources>
