--- a/app/src/main/res/anim/anim_slide_out_top.xml
+++ b/app/src/main/res/anim/anim_slide_out_top.xml
@@ -1,5 +1,5 @@
 <translate xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="250"
-    android:fromYDelta="0%"
+    android:fromXDelta="0%"
     android:interpolator="@android:anim/decelerate_interpolator"
-    android:toYDelta="-100%" />
+    android:toXDelta="-100%" />
