--- a/app/src/main/res/layout/popup_time.xml
+++ b/app/src/main/res/layout/popup_time.xml
@@ -3,7 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    <!--
+    <item
+        android:bottom="1dp"
+        android:left="1dp"
+        android:right="1dp"
+        android:top="-2dp">
+        <shape android:shape="rectangle" >
+            <stroke
+                android:width="1dp"
+                android:color="#dcdcdc" />
 
+            <solid android:color="#FFF" />
+        </shape>
+    </item>
+    -->
     <Chronometer
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
