--- a/app/src/main/res/layout/popup_time.xml
+++ b/app/src/main/res/layout/popup_time.xml
@@ -2,28 +2,38 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <!--
-    <item
-        android:bottom="1dp"
-        android:left="1dp"
-        android:right="1dp"
-        android:top="-2dp">
-        <shape android:shape="rectangle" >
-            <stroke
-                android:width="1dp"
-                android:color="#dcdcdc" />
+    android:layout_height="wrap_content" >
 
-            <solid android:color="#FFF" />
-        </shape>
-    </item>
-    -->
-    <Chronometer
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/colorPrimary" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_horizontal"
+            android:text="관람시간"
+            android:textSize="40sp"
+            android:textColor="#FFFFFF" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/chronometer"
-        android:gravity="center"
-        android:textSize="50sp"
-        android:layout_gravity="center_horizontal" />
+        android:layout_marginTop="50dp">
 
+        <Chronometer
+            android:id="@+id/chronometer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:textSize="40sp"
+            android:textColor="#000000"/>
+
+    </RelativeLayout>
 </RelativeLayout>
